Exercise status (#30)
* Updating of the branch compared to master (#26)

* Move connect-chain-if from devdependacies to dependacies

As it is used in controllers, it is mandatory to have that when installing the project

* Update dependancies (#25)

* Update dependencies

* Remove workaround

* npm update

* Disable responses validation

* no 500 error code if the user forgot to upload files

* Refactor middelware chain in the whole API

* Simplify middleware chain for better readability

* Forgot to add incremental credentials verification

* Customize openapi-enforcer message

* Make query parameters qs compliant

Fix for issue #27

* Refactor code to be sure temp files are deleted if any error

* Correct Sequelize error

The Sequelize documentation lied to me ^^

* Working on exercise status

* Working on exercise status ( TODO )

* Working on exercise status

* Drop idea of "Default" extra enum value
